@@ -126,6 +126,10 @@ typedef ms_uint32 *     ms_bitarray;
 
 #include <gd.h>
 
+#ifdef USE_GDAL
+#include "cpl_string.h"
+#endif
+
 #if defined USE_PDF
 #include <pdflib.h>
 #endif
@@ -1760,6 +1764,7 @@ MS_DLL_EXPORT char *msBuildPath3(char *pszReturnPath, const char *abs_path, cons
 MS_DLL_EXPORT char *msTryBuildPath(char *szReturnPath, const char *abs_path, const char *path);
 MS_DLL_EXPORT char *msTryBuildPath3(char *szReturnPath, const char *abs_path, const char *path1, const char *path2);
 MS_DLL_EXPORT char **msStringSplit(const char *string, char cd, int *num_tokens);
+MS_DLL_EXPORT char **msStringSplitComplex(const char *string, const char *delimiters, int *num_tokens, int CSLTFlags);
 MS_DLL_EXPORT char **msStringTokenize( const char *pszLine, const char *pszDelim, int *num_tokens, int preserve_quote);
 MS_DLL_EXPORT int msCountChars(char *str, char ch);
 MS_DLL_EXPORT char *msLongToString(long value);
